test/statements/manage/MapGuardHalt.good
MapGuardHalt.chpl:9: error: halt reached - A task already holding a map's lock tried to lock it
